--- a/.env
+++ b/.env
@@ -1,14 +1,29 @@
 
-RESEND_API_KEY=re_UZViX5uR_EfkaEsWSRYKTnfRszirFKsrd
-RESEND_FROM_EMAIL=onboarding@resend.dev
-IMGUR_CLIENT_ID=f3d7aded3cf1535
+# RESEND_API_KEY=re_UZViX5uR_EfkaEsWSRYKTnfRszirFKsrd
+# RESEND_FROM_EMAIL=onboarding@resend.dev
+# IMGUR_CLIENT_ID=f3d7aded3cf1535
+
+# SMTP_HOST=smtp.gmail.com
+# SMTP_PORT=465
+# SMTP_USER=opros0609@gmail.com
+# SMTP_PASS=vdap oqaw wfen cpig
+# SMTP_SECURE=true
+
+SMTP_HOST=smtp.mail.ru
+SMTP_PORT=465
+SMTP_USER=tarassegros@mail.ru
+SMTP_PASS=gYo8F48oC4tuvi6fIGg4
+SMTP_SECURE=true
+
+
+
 
 VITE_EMAIL_SERVICE_ID=service_7nh441l
 VITE_EMAIL_TEMPLATE_ID=template_f71nztb
 VITE_EMAIL_USER_ID=DNPd71-7Xc6qxd3vY
 VITE_EMAIL_PRIVATE_KEY=KnjoKORM_IaWNjepUlcqd
-VITE_TO_EMAIL=lisenkotaras69@gmail.com,opros790201@gmail.com
-VITE_FROM_EMAIL=opros0609@gmail.com
+VITE_TO_EMAIL=lisenkotaras69@gmail.com,opros0609@gmail.com
+VITE_FROM_EMAIL=tarassegros@mail.ru
 VITE_PORT=5001
 IMGUR_CLIENT_ID=f3d7aded3cf1535
 
