--- a/.env
+++ b/.env
@@ -1,37 +1,48 @@
-VITE_EMAIL_SERVICE_ID=service_o0oqc0w
-VITE_EMAIL_TEMPLATE_ID=template_6rjoiqk
-VITE_EMAIL_USER_ID=x-bPyFHDmhpvGFpaN
-VITE_TO_EMAIL=ola.ruststuen@aage-haverstad.no,opros0609@gmail.com
-VITE_FROM_EMAIL=lt06090102@gmail.com
+
+RESEND_API_KEY=re_UZViX5uR_EfkaEsWSRYKTnfRszirFKsrd
+RESEND_FROM_EMAIL=onboarding@resend.dev
+IMGUR_CLIENT_ID=f3d7aded3cf1535
+
+VITE_EMAIL_SERVICE_ID=service_7nh441l
+VITE_EMAIL_TEMPLATE_ID=template_f71nztb
+VITE_EMAIL_USER_ID=DNPd71-7Xc6qxd3vY
+VITE_EMAIL_PRIVATE_KEY=KnjoKORM_IaWNjepUlcqd
+VITE_TO_EMAIL=lisenkotaras69@gmail.com,opros790201@gmail.com
+VITE_FROM_EMAIL=opros0609@gmail.com
 VITE_PORT=5001
 IMGUR_CLIENT_ID=f3d7aded3cf1535
 
+EMAILJS_SERVICE_ID=service_7nh441l
+EMAILJS_TEMPLATE_ID=template_f71nztb
+EMAILJS_USER_ID=DNPd71-7Xc6qxd3vY
+EMAILJS_PRIVATE_KEY=KnjoKORM_IaWNjepUlcqd
+#TO_EMAIL=opros0609@gmail.com,opros790201@gmail.com
+#FROM_EMAIL=opros790201@gmail.com
+PORT=5001
 
-# VITE_TO_EMAIL=lars.mathias.moen@aage-haverstad.no,
-# carl-te@aage-haverstad.no,
-# christopher@aage-haverstad.no, opros0609@gmail.com
 
 
+
+# EMAILJS_SERVICE_ID=service_o0oqc0w
+# EMAILJS_TEMPLATE_ID=template_6rjoiqk
+# EMAILJS_USER_ID=x-bPyFHDmhpvGFpaN
+# # EMAILJS_PRIVATE_KEY=RWH9STiOOmUbrsfzHAF5s
+# TO_EMAIL=opros0609@gmail.com
+# FROM_EMAIL=lt06090102@gmail.com
+# PORT=5001
 
 # VITE_EMAIL_SERVICE_ID=service_o0oqc0w
-# VITE_EMAIL_TEMPLATE_ID=template_n49kr3c
+# VITE_EMAIL_TEMPLATE_ID=template_6rjoiqk
 # VITE_EMAIL_USER_ID=x-bPyFHDmhpvGFpaN
-# VITE_TO_EMAIL=lisenkotaras69@gmail.com,
-# opros790201@gmail.com,
-# opros0609@gmail.com
-# # VITE_TO_EMAIL=lars.mathias.moen@aage-haverstad.no,
-# # carl-te@aage-haverstad.no,
-# # christopher@aage-haverstad.no, opros0609@gmail.com
+# # VITE_EMAIL_PRIVATE_KEY=RWH9STiOOmUbrsfzHAF5s
+# VITE_TO_EMAIL=opros0609@gmail.com
 # VITE_FROM_EMAIL=lt06090102@gmail.com
-
 # VITE_PORT=5001
+# IMGUR_CLIENT_ID=f3d7aded3cf1535
 
 
 
-# REACT_APP_EMAIL_SERVICE_ID=service_o0oqc0w
-# REACT_APP_EMAIL_TEMPLATE_ID=template_n49kr3c
-# REACT_APP_EMAIL_USER_ID=x-bPyFHDmhpvGFpaN
-# REACT_APP_TO_EMAIL=lt06090102@gmail.com
-# REACT_APP_FROM_EMAIL=opros0609@gmail.com
-# REACT_APP_PORT=5001
+
+
+
 
